--- a/assessment/.env
+++ b/assessment/.env
@@ -1,2 +1,3 @@
 db_url=host=localhost user=postgres password=ojan161099 dbname=e-commerce port=5432 sslmode=disable TimeZone=Asia/Jakarta
 SECRET=
+BASE_URL="http://localhost:8080"
