--- a/assessment/docker-compose.yml
+++ b/assessment/docker-compose.yml
@@ -2,23 +2,37 @@ version: '1'
 
 services:
   postgres:
+    container_name: postgres
     image: postgres:latest
     restart: always
     environment:
-      - POSTGRES_USER=USER
+      - POSTGRES_USER=root
       - POSTGRES_PASSWORD=PASSWORD
       - POSTGRES_DB=DBNAME
+    networks:
+      - ojan_network
     ports:
       - '5432:5432'
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
   myapp:
     image: ojanherdika/e-commerce:v1
     ports:
       - '8080:8080'
     environment:
-      - SECRET=SECRET
-      - BASE_URL=URL_BASE
-      - db_url=URL_DB
+      - SECRET=bla
+      - BASE_URL=bla
+      - db_url="host=postgres user=USER password=PASSWORD dbname=DBNAME port=5432 sslmode=disable TimeZone=Asia/Jakarta"
     volumes:
       - './my-project:/app'
+    networks:
+      - ojan_network
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
+networks:
+  ojan_network:
+    name: ojan_network
