--- a/assessment/docker-compose.yml
+++ b/assessment/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '1'
+version: '3.9'
 
 services:
   postgres:
@@ -6,7 +6,7 @@ services:
     image: postgres:latest
     restart: always
     environment:
-      - POSTGRES_USER=root
+      - POSTGRES_USER=USER
       - POSTGRES_PASSWORD=PASSWORD
       - POSTGRES_DB=DBNAME
     networks:
@@ -19,13 +19,13 @@ services:
       timeout: 5s
       retries: 5
   myapp:
-    image: ojanherdika/e-commerce:v1
+    image: ojanherdika/e-commerce-go:v1
     ports:
       - '8080:8080'
     environment:
       - SECRET=bla
       - BASE_URL=bla
-      - db_url="host=postgres user=USER password=PASSWORD dbname=DBNAME port=5432 sslmode=disable TimeZone=Asia/Jakarta"
+      - DB_URL="host=postgres user=USER password=PASSWORD dbname=DBNAME TimeZone=Asia/Jakarta"
     volumes:
       - './my-project:/app'
     networks:
